main box styles

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka</title>
     <link href="normalize.css" rel="stylesheet" type="text/css" />
     <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
- <main>
-    <article>
-        <img src="">
+  </head>
+  <body>
+    <main class="main">
+      <article>
+        <img src="avatar.png" alt="Zdjęcie Bartosz Kryścio" />
         <header>
-            <h1> Bartosz Kryścio</h1>
-            <p>Junior FrontEnd Developer</p>
+          <h1>Bartosz Kryścio</h1>
+          <p>(jeszcze nie) Junior FrontEnd Developer</p>
         </header>
         <p>
-            Początkujący programista, jeszcze bez większego doświadczenia. Fascynuje się muzyką: gram, śpiewam. Chcę zmienić coś w swoim zyciu póki jeszcze mam siłę i chęci...
+          Początkujący programista, jeszcze bez większego doświadczenia.
+          Fascynuje się muzyką: gram, śpiewam. Chcę zmienić coś w swoim zyciu
+          póki jeszcze mam siłę i chęci...
         </p>
-        <p>
-            Znajdź mnie w sieci: Facebook, Instagram, Github.
-        </p>
-    </article>
- </main>   
-</body>
+        <p>Znajdź mnie w sieci: Facebook, Instagram, Github.</p>
+      </article>
+    </main>
+  </body>
 </html>
