--- a/index.html
+++ b/index.html
@@ -10,18 +10,28 @@
   </head>
   <body>
     <main class="main">
-      <article>
-        <img src="avatar.png" alt="Zdjęcie Bartosz Kryścio" />
-        <header>
-          <h1>Bartosz Kryścio</h1>
-          <p>(jeszcze nie) Junior FrontEnd Developer</p>
+      <article class="person">
+        <img
+          class="person__picture"
+          src="avatar.png"
+          alt="Zdjęcie Bartosz Kryścio"
+        />
+        <header class="person__info">
+          <h1 class="person__name">Bartosz Kryścio</h1>
+          <p class="person__position">
+            (jeszcze nie) Junior FrontEnd Developer
+          </p>
         </header>
-        <p>
-          Początkujący programista, jeszcze bez większego doświadczenia.
-          Fascynuje się muzyką: gram, śpiewam. Chcę zmienić coś w swoim zyciu
-          póki jeszcze mam siłę i chęci...
+        <p class="person__description">
+          Początkujący programista, <strong class="special">jeszcze</strong> bez
+          większego doświadczenia. Fascynuje się muzyką: gram, śpiewam. Chcę
+          zmienić coś w swoim zyciu póki jeszcze mam siłę i chęci...
         </p>
-        <p>Znajdź mnie w sieci: Facebook, Instagram, Github.</p>
+        <p class="person__description">
+          Znajdź mnie w sieci: <a class="person__link" href="#">Facebook</a>,
+          <a class="person__link" href="#">Instagram</a>,
+          <a class="person__link" href="https://github.com/cichy1927/">Github</a>.
+        </p>
       </article>
     </main>
   </body>
