person conten styles

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             (jeszcze nie) Junior FrontEnd Developer
           </p>
         </header>
-        <p class="person__description">
+        <p class="person__description person__description--with-margin">
           Początkujący programista, <strong class="special">jeszcze</strong> bez
           większego doświadczenia. Fascynuje się muzyką: gram, śpiewam. Chcę
           zmienić coś w swoim zyciu póki jeszcze mam siłę i chęci...
